ใช้งานได้ปกติแล้ว

--- a/cp/docker-compose.yml
+++ b/cp/docker-compose.yml
@@ -54,16 +54,20 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_DOCKER:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT_DOCKER
       KAFKA_NUM_PARTITIONS: 3
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
+      KAFKA_DEFAULT_REPLICATION_FACTOR: 3
+      KAFKA_MIN_INSYNC_REPLICAS: 2
     networks:
       - kafka-network
+    volumes:
+      - /root/kafka/log/kafka-data/kafka1:/var/lib/kafka/data
+      - /root/kafka/log/kafka-logs/kafka1:/var/log/kafka
 
   kafka2:
     image: confluentinc/cp-kafka:latest
     container_name: kafka2
     ports:
-      - "9093:9093" #port เชื่อมต่อ Kafka จาก host
-      - "29093:29093" #port ที่รันบน container อื่นๆ เพื่อให้คุยกันใน docker ได้
+      - "9093:9093" # Port เชื่อมต่อ Kafka จาก host
+      - "29093:29093" # Port ที่รันบน container อื่นๆ เพื่อให้คุยกันใน docker ได้
     depends_on:
       - zookeeper-1
       - zookeeper-2
@@ -71,17 +75,18 @@ services:
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper-1:2181,zookeeper-2:2181,zookeeper-3:2181
-      # PLAINTEXT://172.17.0.1:9093 use connect to host vm , PLAINTEXT_DOCKER://kafka2:29093 use connect in container
-      # 172.17.0.1 IP ของ Docker Host ใช้คุยกันระหว่าง Container กับ Host Machine
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://172.17.0.1:9093,PLAINTEXT_DOCKER://kafka2:29093
       KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9093,PLAINTEXT_DOCKER://0.0.0.0:29093
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_DOCKER:PLAINTEXT
-      # บอก Kafka ให้ใช้ PLAINTEXT_DOCKER สำหรับ การสื่อสารระหว่าง broker
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT_DOCKER
       KAFKA_NUM_PARTITIONS: 3
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
+      KAFKA_DEFAULT_REPLICATION_FACTOR: 3
+      KAFKA_MIN_INSYNC_REPLICAS: 2
     networks:
       - kafka-network
+    volumes:
+      - /root/kafka/log/kafka-data/kafka2:/var/lib/kafka/data
+      - /root/kafka/log/kafka-logs/kafka2:/var/log/kafka
 
   kafka3:
     image: confluentinc/cp-kafka:latest
@@ -101,6 +106,28 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_DOCKER:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT_DOCKER
       KAFKA_NUM_PARTITIONS: 3
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
+      KAFKA_DEFAULT_REPLICATION_FACTOR: 3
+      KAFKA_MIN_INSYNC_REPLICAS: 2
+    networks:
+      - kafka-network
+    volumes:
+      - /root/kafka/log/kafka-data/kafka3:/var/lib/kafka/data
+      - /root/kafka/log/kafka-logs/kafka3:/var/log/kafka
+
 networks:
-  - kafka-network
+  kafka-network:
+    driver: bridge
+    # environment:
+    #   KAFKA_BROKER_ID: 1
+    #   KAFKA_ZOOKEEPER_CONNECT: zookeeper-1:2181,zookeeper-2:2181,zookeeper-3:2181
+    #   # PLAINTEXT://172.17.0.1:9093 use connect to host vm , PLAINTEXT_DOCKER://kafka2:29093 use connect in container
+    #   # 172.17.0.1 IP ของ Docker Host ใช้คุยกันระหว่าง Container กับ Host Machine
+    #   KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://172.17.0.1:9093,PLAINTEXT_DOCKER://kafka2:29093
+    #   KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9093,PLAINTEXT_DOCKER://0.0.0.0:29093
+    #   KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_DOCKER:PLAINTEXT
+    #   # บอก Kafka ให้ใช้ PLAINTEXT_DOCKER สำหรับ การสื่อสารระหว่าง broker
+    #   KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT_DOCKER
+    #   KAFKA_NUM_PARTITIONS: 3
+    #   KAFKA_DEFAULT_REPLICATION_FACTOR: 3
+    # networks:
+    #   - kafka-network
